--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h3 {
   margin: 0 0 10px;
 }
 
-p { 
+p {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -28,10 +28,19 @@ figcaption {
   text-shadow: 0 2px 3px #000;
 }
 
+.shadow {
+  box-shadow: 0 3px 10px #333;
+}
 
-
+.border-right {
+  border-right: 1px dotted #ccc;
+  padding-right: 30px;
+}
 /*////////// BACKGROUNDS //////////*/
-
+.white-wood {
+  background: url(../images/white-wood.jpg) no-repeat center top;
+  background-size: cover;
+}
 
 
 /*/////// MEDIA ////////*/
@@ -72,17 +81,17 @@ img, video, audio, iframe, table, form {
 .col-1 {
   float: left;
   width: 32%;
-  background: #ccc;
+
 }
 
 .col-2 {
   float: left;
   width: 66%;
-  background: #ccc;
+
 }
 
 .col-3 {
-  background: #ccc;
+
 }
 
 [class*="col-"] {
@@ -111,12 +120,33 @@ img, video, audio, iframe, table, form {
 }
 
 /*////////// HEADER //////////*/
-
+header {
+  margin: 0 0 30px;
+}
 
 
 /*////////// NAVBAR //////////*/
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid #ccc;
+}
 
+#navbar nav {
+  border-left: 1px solid #ccc;
+}
 
+#navbar nav a {
+  display: inline-block;
+  width: 16.6666667%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: black;
+}
 
 /*////////// LOGO //////////*/
 
@@ -135,6 +165,7 @@ img, video, audio, iframe, table, form {
 section {
   padding: 30px;
   margin-bottom: 20px;
+  background: white;
 
 }
 
